# programming-in-haskell-exercises

./: README.md
programming-in-haskell-exercises.hsproj/: .uuid
programming-in-haskell-exercises.hsproj/ProgrammingInHaskell/: Chapter01.hs  Chapter02.hs  Chapter03.hs  Chapter04.hs  Chapter05.hs  Chapter06.hs  Chapter07.hs  Chapter08.hs  Chapter09.hs  Chapter09_6.hs  Chapter10.hs  Chapter11.hs  Chapter12.hs  Chapter13.hs  Chapter13_9.hs  Chapter14.hs  Chapter15.hs  Chapter16.hs  ProgrammingInHaskell.cabal  _Chapter01.hsplay  _Chapter02.hsplay  _Chapter03.hsplay  _Chapter04.hsplay  _Chapter05.hsplay  _Chapter06.hsplay  _Chapter07.hsplay  _Chapter08.hsplay  _Chapter09.hsplay  _Chapter09_6.hsplay  _Chapter10.hsplay  _Chapter11.hsplay  _Chapter12.hsplay  _Chapter13.hsplay  _Chapter13_9.hsplay  _Chapter14.hsplay  _Chapter15.hsplay
