cabal-version: 2.4
name: ProgrammingInHaskell
version: 1.0
stability: experimental
x-ghc-framework-version: 8.6.4-13.14-3
x-last-ide-version: HfM1.8.2

executable ProgrammingInHaskell
    other-modules:
        Chapter01
        Chapter02
        Chapter03
        Chapter04
        Chapter05
        Chapter06
        Chapter07
        Chapter08
        Chapter09
        Chapter09_6
        Chapter10
        Chapter11
        Chapter12
        Chapter13
        Chapter13_9
        Chapter14
        Chapter15
        Chapter16
    default-language: Haskell2010
    build-depends:
        base -any,
        random -any,
        containers -any
