cabal-version: 2.4
name: ProgrammingInHaskell
version: 1.0
stability: experimental
x-ghc-framework-version: 8.6.4-13.14-2
x-last-ide-version: HfM1.7.0

executable ProgrammingInHaskell
    main-is: Main.hs
    other-modules:
        Chapter05
        Chapter04
        Chapter02
        Chapter06
        Chapter03
        Chapter01
    default-language: Haskell2010
    build-depends:
        base -any
