cabal-version: 2.4
name: ProgrammingInHaskell
version: 1.0
stability: experimental
x-ghc-framework-version: 8.6.4-13.14-2
x-last-ide-version: HfM1.7.0

executable ProgrammingInHaskell
    main-is: Main.hs
    other-modules:
        Chapter03
        Chapter02
        Chapter01
        Chapter07
        Chapter09
        Chapter05
        Chapter06
        Chapter09_6
        Chapter08
        Chapter04
        Chapter10
    default-language: Haskell2010
    build-depends:
        base -any
